<resources>
    <string name="app_name">Rajdhani Guide</string>
    <string name="top_bar_home">Welcome</string>
    <string name="top_bar_schedules">View Routes</string>
    <string name="top_bar_admin">Espace administrateur</string>
    <string name="itinerary">Find a direct route</string>
    <string name="choose">Choose your point of departure and your destination.</string>
    <string name="departure">Departure</string>
    <string name="destination">Destination</string>
    <string name="terminal1">Terminal 1</string>
    <string name="terminal2">Terminal 2</string>
    <string name="search">Find</string>
    <string name="welcome_text0">Find the best way to get around Kathmandu valley using public transport.</string>
    <string name="welcome_text1">Making sure you never feel lost and clueless since 2023!</string>
    <string name="welcome_button">Lets Go!</string>
    <string name="loading">Please wait…</string>
    <string name="empty_database_error">Une erreur est survenue, Assurez que vous avez une connexion internet stable et réessayez.</string>
    <string name="search_results">Search Results</string>
    <string name="enter_admin_key">Veuillez saisir la clé administrateur:</string>
    <string name="admin_key">Clé administrateur</string>
    <string name="confirm">Confirmer</string>
    <string name="wrong_key">Mauvaise clé, veuillez réessayer</string>
    <string name="you_are_admin">Vous êtes adminstrateur</string>
    <string name="uni_to_stop">Univ -> Arret</string>
    <string name="stop_to_uni">Arret -> Univ</string>
    <string name="admin_details">Ici vous pouvez ajoutez des trajets.\nVous pouvez aussi supprimer des trajets depuis leur page details appropriée.</string>
    <string name="cancel">Cancel</string>
    <string name="caution">Avertissement</string>
    <string name="confirm_report">Viable Route Option</string>
    <string name="confirm_remove_report">Retirer votre signalement?</string>
    <string name="delete_route">Êtes-vous sûr de vouloir definitivement supprimer ce trajet?</string>
    <string name="reported_delays0">Retard signalé par</string>
    <string name="reported_delays1">étudiant(s) aujourd\'hui</string>
    <string name="add_report">This is a viable route option</string>
    <string name="remove_report">Êtes-vous sûr de vouloir annuler votre signalement de retard pour cet horaire?</string>
    <string name="help">Help</string>
    <string name="help_title">What do I do?</string>
    <string name="help_description">Simply enter your departure and destination points and Rajdhani Guide will provide you with the best public transport routes to get there without having to ask anyone else or stay confused and lost.</string>
    <string name="_return">Return</string>
    <string name="competition_title">Competition</string>
    <string name="competition_info">Competition is coming</string>
    <string name="fullname">Enter full name</string>
    <string name="phonenumber">Enter phone number</string>
    <string name="route_input">Enter route information</string>
    <string name="submit">Submit</string>
    <string name="competition_top_bar_text">Competition</string>

    <string name="power_by">Rajdhani Guide</string>
    <string name="slogan_name">Everything your city holds!</string>
    <string name="logo_name">Get A Way</string>

    <!--     General Menu names     -->
    <string name="home">HOME</string>
    <string name="all_places">ALL PLACES TO VISIT</string>
    <string name="all_categories">ALL CATEGORIES</string>
    <string name="add_missing_place">ADD MISSING PLACE</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="e_commerce">Shopping E-commerce </string>
    <string name="script">Run Script </string>
    <string name="food_delivery">Food Delivery </string>
    <string name="taxi">Taxi </string>

    <!--     All Categories Menu names     -->
    <string name="expand_all_routefinder">Find buses, tempos or sajha yatayat that runs between stops</string>
    <string name="expand_all_reward">Participate in weekly contest and win prizes</string>
    <string name="expand_all_restaurant">Popular dining options</string>
    <string name="car_rent">Route Finder</string>
    <string name="all_shops">All Shops</string>

    <!--  Titles and Descriptions  -->
    <string name="featured_locations">All Featured Locations</string>
    <string name="featured_locations_description">All the locations that are featured and have the top demand in town!</string>
    <string name="most_viewed_locations">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search...</string>

    <!--  Categories  -->
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="shops">Competition</string>
    <string name="banks">Banks</string>
    <string name="airports">Airports</string>
    <string name="education">Education</string>
    <string name="hospitals">Hospitals</string>

    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>

    <!--  General Strings  -->
    <string name="sign_up">Sign Up</string>
    <string name="heading">Enjoy\nTraveling</string>
    <string name="tag_line">Provider the best location</string>
    <string name="create_account">Create\nAccount</string>
    <string name="how_we_work">How we work?</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password</string>

    <!--  Field Strings  -->
    <string name="enter_first_name">First Name</string>
    <string name="enter_last_name">Last Name</string>
    <string name="enter_email">Email</string>
    <string name="enter_phone_number">Phone Number</string>
    <string name="enter_password">Password</string>
    <string name="title_activity_all_places">AllPlacesActivity</string>

    <string name="hello_world">Hello Square World!</string>
    <string name="personal">  Contact </string>
</resources>